[package]
name = "j4frv32emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "librv64emu"
path = "src/lib.rs"

[[bin]]
name = "riscv-tests"
path = "bin/riscv-tests.rs"

[[bin]]
name = "run-bin"
path = "bin/run-bin.rs"

[dependencies]
colored = "2.1.0"
elf = "0.7.4"
glob = "0.3.1"
